new page/pageservices classes, enums for part 1 and some library and tests for part 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-automation.practice.url=http://automationpractice.com/index.php
+#PART 1
+#------
+#These are the different url we are using.
+#Actually, we only use the first one, but for the ignored smokeTest, we can use the other one : it works.
+
+page.automation.practice.index.url=http://automationpractice.com/index.php
+page.authentication.url=http://automationpractice.com/index.php?controller=authentication&back=my-account
+page.create.an.account.url=http://automationpractice.com/index.php?controller=authentication&back=my-account&email_create=EMAIL&SubmitCreate=1
+page.my.account.url=http://automationpractice.com/index.php?controller=authentication&back=my-account&email=EMAIL&PASSWORD&SubmitLogin
+page.category.url=http://automationpractice.com/index.php?id_category=CATEGORY_NUMBER&controller=category
+
+
+
+#PART 2
+#------
+webservice.all.url=http://services.groupkt.com/country/get/all
+webservice.format.url=http://services.groupkt.com/country/get/iso2code/COUNTRY_ISO2CODE
+
+
