--- a/src/main/resources/ui_elements.properties
+++ b/src/main/resources/ui_elements.properties
@@ -1,6 +1,14 @@
+#these are the ui elements we need, the first element group : "authentication" or "account_creation" described the page they are located.
+#The name comes from the h1/heading name of the page more or less (except for the start page)
+
 start_page.sign_in.login.link=css->a.login
-my_account.email_address.field=id->email_create
-my_account.submit.button=id->SubmitCreate
+
+authentication.email_address.field=id->email_create
+authentication.submit.create.button=id->SubmitCreate
+authentication.already.registered.email_address.field=id->email
+authentication.password.field=id->passwd
+authentication.submit.login.button=id->SubmitLogin
+
 account_creation.your_perso_info.title.gender.male.radio=id->id_gender1
 account_creation.your_perso_info.title.gender.female.radio=id->id_gender2
 account_creation.your_perso_info.customer_firstname.field=id->customer_firstname
@@ -25,4 +33,32 @@ account_creation.address.mobile_phone.field=id->phone_mobile
 account_creation.address.assign_an_alias.field=id->alias
 account_creation.register.buton=id->submitAccount
 
-all_pages.page_heading.item=css->h1
+my_account.logout.link=css->a.logout
+my_account.header_user_info.text=css->a.account
+my_account.welcome.text=class->info-account
+my_account.women.link=link->Women
+my_account.dresses.link=link->Dresses
+my_account.tshirts.link=link->T-shirts
+my_account.faded.short.sleeve.tshirt.link=xpath->//a[@title='Faded Short Sleeve T-shirts']/ancestor::li
+my_account.add_to_cart.button=css->#add_to_cart>button
+
+layer_cart.layerCart.item=css->#layer_cart[style*='display: block']
+layer_cart.proceedToCheckout.button=css->#layer_cart a[title='Proceed to checkout']
+
+shopping_cart_summary.proceed_to_checkout.button=css->.cart_navigation>a[title='Proceed to checkout']
+
+addresses.proceed_to_checkout.button=css->button[name='processAddress']
+
+shipping.proceedToCheckout.button=css->button[name='processCarrier']
+shipping.termService.checkbox=id->uniform-cgv
+
+payment_method.bankwire.link=css->a.bankwire
+
+order_summary.confirm.button=css->#cart_navigation>button[type='submit']
+
+order_confirmation.orderStept4.item=css->li[class='step_done step_done_last four']
+order_confirmation.orderStept5.item=css->li#step_end[class='step_current last']
+order_confirmation.confirmation_info.item=css->.cheque-indent>strong
+
+all_pages.page_body.id=css->body[class*=lang]
+all_pages.page_heading.text=css->#page h1
